#178: Removed support for `TIMESTAMP WITH LOCAL TIME ZONE` (#180)